# BE-router

./: .markdownlint.yaml  Dockerfile  Dockerfile-dev  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-dev.yml  deploy.yaml
src/: main.py
src/auth/: auth_router.py  auth_service.py
src/auth/dtos/: login_dtos.py
src/auth/queries/: create_user.sql  get_user_by_id.sql  get_user_by_username.sql  get_user_for_auth.sql
src/auth/utils/: test_crypt.py  token_utils.py
src/common/dtos/: common_response.py  custom.py
src/common/utils/: get_services.py
src/configs/: api_routers.py  database.py  logging_config.py  origins.py  redis_conn.py  redis_conn_rule.py  setting.py
src/gm/: gm_routers.py
src/gm/dtos/: gm_dtos.py
src/info/: info_router.py  item_service.py
src/info/dtos/: enemy_dtos.py  item_dtos.py  personality_dtos.py
src/info/queries/: count_items.sql  get_items.sql
src/minigame/: minigame_router.py  minigame_service.py
src/minigame/dtos/: minigame_dtos.py
src/scenario/: scenario_router.py
src/state/: state_router.py
src/state/dtos/: state_dtos.py
src/user/: user_router.py
src/user/dtos/: user_dtos.py
src/utils/: get_user_id.py  lifespan_handlers.py  load_sql.py  logger.py  parse_json.py  proxy_request.py  proxy_stream.py
tests/: test_plan_0004_proxy_contract.py
